--- a/contact.html
+++ b/contact.html
@@ -148,10 +148,10 @@ Author URL: http://w3layouts.com
                             <div class="cont-add-rgt">
                                  <h4>Find Us On</h4>
                                  <div class="main-social-1 mt-2">
-                                    <a href="#facebook" class="https://facebook.com/ysjournal"><span class="fa fa-facebook"></span></a>
+                                    <a href="https://facebook.com/ysjournal" class="facebook"><span class="fa fa-facebook"></span></a>
                                     <a href="httpd://twitter.com/YSJournal" class="twitter"><span class="fa fa-twitter"></span></a>
-                                    <a href="#instagram" class="https://instagram.com/ysjournal"><span class="fa fa-instagram"></span></a>
-                                                                   <a href="#linkedin" class="linkedin"><span class="fa fa-linkedin"></span></a>
+                                    <a href="https://instagram.com/ysjournal" class="instagram"><span class="fa fa-instagram"></span></a>
+				    <a href="https://linkedin.com/company/young-scientists-journal" class="linkedin"><span class="fa fa-linkedin"></span></a>
                                 </div>
                             </div>
                             <div class="cont-add-lft">
