--- a/index.html
+++ b/index.html
@@ -258,6 +258,7 @@ Author URL: http://w3layouts.com
               <li><span class="fa fa-check"></span>Exclusive benefits for attending and presenting at <a href="https://events.ysjournal.com/"><u>conferences of the Young Scientists Journal.</u></a><li>
             </ul>
             <br>
+            <div>
             <b>Benefits for clubs:</b>
             <ul class="cont-4">
               <li><span class="fa fa-check"></span>Research 101 workshops and seminars for reSTEM Safari sessions, delivered via our online portal.</li>
@@ -270,9 +271,12 @@ Author URL: http://w3layouts.com
               
             </ul>
 							<a class="btn btn-secondary btn-theme2 mt-3" href="activities.html"> Read More</a>
-				</div>
-				<div class="column ccont-left col-lg-6">
-					<img src="assets/conf pics/conf5.jpeg" class="img-responsive" alt="">
+            </div>
+            </div>
+				  <div class="column ccont-left col-lg-6">
+          <br><br>
+          <img src="assets/conf pics/conf5.jpeg" class="img-responsive" alt=""><br>
+          <img src="assets/conf pics/conf4.jpg" class="img-responsive" alt="">
 				</div>
 			</div>
 		</div>
